# flax-mup

./: LICENSE.md  README.md  pyproject.toml
flax_mup/: __init__.py  _mup.py
flax_mup/test/: __main__.py
